fix dark mode highlight color

--- a/assets/css/suttas.css
+++ b/assets/css/suttas.css
@@ -1291,13 +1291,21 @@ body.dark .find-error {
 }
 
 .ssp-find-highlight {
-  background-color: #ffff00 !important;
+  background-color: #FFFF00 !important;
   color: inherit !important;
   padding: 1px 0px;
 }
 
 .ssp-find-highlight.current {
-  background-color: #ff9632 !important;
+  background-color: #FF9632 !important;
+}
+
+body.dark .ssp-find-highlight {
+  background-color: #007A31 !important;
+}
+
+body.dark .ssp-find-highlight.current {
+  background-color: #CF6303 !important;
 }
 
 @media (max-width: 768px) {
